Fix animation bounce with backface-visibility prop in style.css file

--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,7 @@ body {
 .heading-primary {
   color: #fff;
   text-transform: uppercase;
+  backface-visibility: hidden;
 }
 
 .heading-primary-main {
